remove react logos

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,18 +2,14 @@
   "short_name": "Lizzy Meg",
   "name": "Lizzy Meg Professional Dancer and Choreograhper",
   "icons": [
+    
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "L.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "L.png",
       "type": "image/png",
       "sizes": "512x512"
     }
